ADD maven-compiler-plugin release for cross compile compatibility